// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavBar User is logged in should render other navbar menu 1`] = `
<DocumentFragment>
  <nav
    class="navbar bg-default navbar navbar-expand-lg navbar-light"
  >
    <a
      aria-current="page"
      class="navbar-brand fs-1 active"
      href="/"
    >
      <img
        class="p-2 m-3 filter-invert"
        height="90px"
        src="cl_logo.png"
        title="Champions League"
      />
      Fantasy
    </a>
    <button
      aria-controls="responsive-navbar-nav"
      aria-label="Toggle navigation"
      class="navbar-toggler collapsed"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-bars "
        color="white"
        data-icon="bars"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"
          fill="currentColor"
        />
      </svg>
    </button>
    <div
      class="navbar-collapse collapse"
      id="responsive-navbar-nav"
    >
      <div
        class="navbar-nav"
      >
        <a
          class="nav-item nav-links fw-light"
          href="/team"
        >
          Test User's team
        </a>
        <a
          class="nav-item nav-links fw-light"
          href="/leagues"
        >
          Leagues
        </a>
        <a
          class="nav-item nav-links fw-light"
          href="/inbox"
        >
          Inbox 
          <span
            class="badge bg-secondary"
          >
            0
          </span>
        </a>
      </div>
      <div
        class="ms-auto pe-5 navbar-nav"
      >
        <a
          aria-current="page"
          class="nav-item nav-links fw-light active"
          href="/"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-right-from-bracket clickable align-middle ps-0 pe-2 fs-3"
            data-icon="right-from-bracket"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M160 96c17.7 0 32-14.3 32-32s-14.3-32-32-32H96C43 32 0 75 0 128V384c0 53 43 96 96 96h64c17.7 0 32-14.3 32-32s-14.3-32-32-32H96c-17.7 0-32-14.3-32-32l0-256c0-17.7 14.3-32 32-32h64zM504.5 273.4c4.8-4.5 7.5-10.8 7.5-17.4s-2.7-12.9-7.5-17.4l-144-136c-7-6.6-17.2-8.4-26-4.6s-14.5 12.5-14.5 22v72H192c-17.7 0-32 14.3-32 32l0 64c0 17.7 14.3 32 32 32H320v72c0 9.6 5.7 18.2 14.5 22s19 2 26-4.6l144-136z"
              fill="currentColor"
            />
          </svg>
          Logout
        </a>
      </div>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`NavBar should render NavBar component 1`] = `
<DocumentFragment>
  <nav
    class="navbar bg-default navbar navbar-expand-lg navbar-light"
  >
    <a
      aria-current="page"
      class="navbar-brand fs-1 active"
      href="/"
    >
      <img
        class="p-2 m-3 filter-invert"
        height="90px"
        src="cl_logo.png"
        title="Champions League"
      />
      Fantasy
    </a>
    <button
      aria-controls="responsive-navbar-nav"
      aria-label="Toggle navigation"
      class="navbar-toggler collapsed"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-bars "
        color="white"
        data-icon="bars"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"
          fill="currentColor"
        />
      </svg>
    </button>
    <div
      class="navbar-collapse collapse"
      id="responsive-navbar-nav"
    >
      <div
        class="navbar-nav"
      >
        <a
          class="nav-item nav-links fw-light"
          href="/team"
        >
          My Team
        </a>
        <a
          class="nav-item nav-links fw-light"
          href="/register"
        >
          Register
        </a>
        <a
          class="nav-item nav-links fw-light"
          href="/login"
        >
          Log In
        </a>
      </div>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`NavBar when navbar expands should allow collapse via main link 1`] = `
<DocumentFragment>
  <nav
    class="navbar bg-default navbar navbar-expand-lg navbar-light"
  >
    <a
      aria-current="page"
      class="navbar-brand fs-1 active"
      href="/"
    >
      <img
        class="p-2 m-3 filter-invert"
        height="90px"
        src="cl_logo.png"
        title="Champions League"
      />
      Fantasy
    </a>
    <button
      aria-controls="responsive-navbar-nav"
      aria-label="Toggle navigation"
      class="navbar-toggler collapsed"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-bars "
        color="white"
        data-icon="bars"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"
          fill="currentColor"
        />
      </svg>
    </button>
    <div
      class="navbar-collapse collapse"
      id="responsive-navbar-nav"
    >
      <div
        class="navbar-nav"
      >
        <a
          class="nav-item nav-links fw-light"
          href="/team"
        >
          My Team
        </a>
        <a
          class="nav-item nav-links fw-light"
          href="/register"
        >
          Register
        </a>
        <a
          class="nav-item nav-links fw-light"
          href="/login"
        >
          Log In
        </a>
      </div>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`NavBar when navbar expands should allow collapse via main link 2`] = `
<DocumentFragment>
  <nav
    class="navbar bg-default navbar navbar-expand-lg navbar-light"
  >
    <a
      aria-current="page"
      class="navbar-brand fs-1 active"
      href="/"
    >
      <img
        class="p-2 m-3 filter-invert"
        height="90px"
        src="cl_logo.png"
        title="Champions League"
      />
      Fantasy
    </a>
    <button
      aria-controls="responsive-navbar-nav"
      aria-label="Toggle navigation"
      class="navbar-toggler collapsed"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-bars "
        color="white"
        data-icon="bars"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"
          fill="currentColor"
        />
      </svg>
    </button>
    <div
      class="navbar-collapse collapsing"
      id="responsive-navbar-nav"
      style=""
    >
      <div
        class="navbar-nav"
      >
        <a
          class="nav-item nav-links fw-light"
          href="/team"
        >
          My Team
        </a>
        <a
          class="nav-item nav-links fw-light"
          href="/register"
        >
          Register
        </a>
        <a
          class="nav-item nav-links fw-light"
          href="/login"
        >
          Log In
        </a>
      </div>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`NavBar when navbar expands should change navbar layout 1`] = `
<DocumentFragment>
  <nav
    class="navbar bg-default navbar navbar-expand-lg navbar-light"
  >
    <a
      aria-current="page"
      class="navbar-brand fs-1 active"
      href="/"
    >
      <img
        class="p-2 m-3 filter-invert"
        height="90px"
        src="cl_logo.png"
        title="Champions League"
      />
      Fantasy
    </a>
    <button
      aria-controls="responsive-navbar-nav"
      aria-label="Toggle navigation"
      class="navbar-toggler collapsed"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-bars "
        color="white"
        data-icon="bars"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"
          fill="currentColor"
        />
      </svg>
    </button>
    <div
      class="navbar-collapse collapse"
      id="responsive-navbar-nav"
    >
      <div
        class="navbar-nav"
      >
        <a
          class="nav-item nav-links fw-light"
          href="/team"
        >
          My Team
        </a>
        <a
          class="nav-item nav-links fw-light"
          href="/register"
        >
          Register
        </a>
        <a
          class="nav-item nav-links fw-light"
          href="/login"
        >
          Log In
        </a>
      </div>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`NavBar when navbar expands should change navbar layout 2`] = `
<DocumentFragment>
  <nav
    class="navbar bg-default navbar navbar-expand-lg navbar-light"
  >
    <a
      aria-current="page"
      class="navbar-brand fs-1 active"
      href="/"
    >
      <img
        class="p-2 m-3 filter-invert"
        height="90px"
        src="cl_logo.png"
        title="Champions League"
      />
      Fantasy
    </a>
    <button
      aria-controls="responsive-navbar-nav"
      aria-label="Toggle navigation"
      class="navbar-toggler"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-xmark "
        color="white"
        data-icon="xmark"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 320 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M310.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L160 210.7 54.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L114.7 256 9.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 301.3 265.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L205.3 256 310.6 150.6z"
          fill="currentColor"
        />
      </svg>
    </button>
    <div
      class="navbar-collapse collapsing"
      id="responsive-navbar-nav"
      style="height: 0px;"
    >
      <div
        class="navbar-nav"
      >
        <a
          class="nav-item nav-links fw-light"
          href="/team"
        >
          My Team
        </a>
        <a
          class="nav-item nav-links fw-light"
          href="/register"
        >
          Register
        </a>
        <a
          class="nav-item nav-links fw-light"
          href="/login"
        >
          Log In
        </a>
      </div>
    </div>
  </nav>
</DocumentFragment>
`;
